  initialized yet. This issue will hide the real underlying issue.
- Fixed an error on startup for MacOS (from the terminal).
- Fixed an error on startup for OpenJDK.
- Items not described correctly for none standard modules.
- Icon not showing for the shortcut created on Linux.
- Uniqueness check not working correctly if one of the fields is a key field but not
  a required field.

[Changed]
- Internal structural changes have been made to allow the Data Crow core library to be
  incorporated in other applications. Most importantly the logging mechanism is now 
  completely decoupled from the code as such that it can be registered by the 
  application/app using the core library. Other major changes have been made to 
  significantly reduce the references to the AWT and Swing libraries (GUI).
- The module wizard now allows you to create references to the same module multiple
  times.

[To Do]
- Create a DMG file (code signed) for MacOS users (severely lacking at this moment, 
  Data Crow can only be run from the terminal at this moment).
- Add online services for comic books (Marvel and Comic Vine).
- Add translations for comic book module
- Adjust settings for the comic book module.
- Default values for: gender, ..
- Change icon for gender


-----------------------------------------------------------------------------------------
Data Crow version 4.8.1                                            Released on 2023-03-28
-----------------------------------------------------------------------------------------
With version 4.8.0 I mistakingly made a structure change to the states for the various
modules. This fix reverts back that change after which you'll have all the features of
version 4.8.0 without having to deal with this pesky issue.
Luckily a user quickly notified me allowing me to fix this issue swiftly. Not many of
you will have had the version 4.8 installed but I thought it to be better to create this