@@ -275,7 +275,7 @@ public class ItemSynchronizerDialog extends DcDialog implements ActionListener {
         //**********************************************************
         //Online Server Settings panel
         //**********************************************************
-        panelOnlineServiceSettings = new OnlineServiceSettingsPanel(null, false, false, true, true, true, module);
+        panelOnlineServiceSettings = new OnlineServiceSettingsPanel(null, false, true, true, true, module);
 
         //**********************************************************
         //Re-parse panel
