@@ -134,6 +134,7 @@ public class DcModules implements Serializable {
     public static final int _LICENSE = 1700000;
     public static final int _GENDER = 1800000;
     public static final int _COMICTEAM = 1900000;
+    public static final int _COMICPOWER = 2000000;
     
     public static final int _MAPPING  = 500000000;
     public static final int _TEMPLATE = 600000000;
@@ -333,6 +334,12 @@ public class DcModules implements Serializable {
         comicTeamModule.setIcon16(IconLibrary._icoTeam16);
         comicTeamModule.setIcon32(IconLibrary._icoTeam32);
         propertyBaseModules.put(DcModules._COMICTEAM, comicTeamModule);
+        
+        DcPropertyModule comicPowerModule = new DcPropertyModule(DcModules._COMICPOWER, "Power", "comic_power", "comic_power", "Power", "Powers");
+        comicPowerModule.setServingMultipleModules(true);
+        comicPowerModule.setIcon16(IconLibrary._icoTeam16);
+        comicPowerModule.setIcon32(IconLibrary._icoTeam32);
+        propertyBaseModules.put(DcModules._COMICPOWER, comicPowerModule);
         
         DcPropertyModule editionModule = new DcPropertyModule(DcModules._EDITIONTYPE, "Edition Type", "editiontype", "edty", "Edition type", "Edition types");
         editionModule.setServingMultipleModules(true);
