@@ -1,3 +1,5 @@
+msgComicVineNoApiKeyDefined = To use this online service you need to be registered at Comic Vine. You can request for a completely FREE key by creating an account on ComicVine.com by going to this page (after registering). See:
+msgComicVineSearchingForCharacter = Searching for character: %1
 msgSynchServiceWaiting = Waiting for a client to connect...
 msgSynchServiceClientConnected = A client has connected (%1)
 msgSynchServiceStopped = Service has been stopped
